Camera image capture and saving image to firebase storage

--- a/DermaCare/Podfile
+++ b/DermaCare/Podfile
@@ -9,6 +9,8 @@ target 'DermaCare' do
   pod 'Firebase/Core'
   pod 'Firebase/Auth'
   pod 'Firebase/Database'
+  pod ‘Firebase/Storage’
+
   target 'DermaCareTests' do
     inherit! :search_paths
     # Pods for testing
